--- a/style.css
+++ b/style.css
@@ -245,58 +245,16 @@ section
     color: #111;
 }
 
-.expert .content
-{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    flex-direction: row;
-    margin-top: 40px;
-}
-
-.expert .content .box
-{
-    width: 250px;
-    margin: 15px;
-}
-
-.expert .content .box .imgBx
-{
-    position: relative;
-    width: 100%;
-    height: 300px;
-}
-
-.expert .content .box .imgBx img
-{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.expert .content .box .text
-{
-    padding: 15px 0 5px;
-}
-
-.expert .content .box .text h3
-{
-   font-weight: 400;
-   color: #111; 
-}
-
 .testimonials
 {
     background: url(images/bg2.jpg);
     background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .white .titleText, .white p
 {
-color: #fff;
+color: rgb(0, 0, 0);
 }
 
 .testimonials .content
@@ -362,8 +320,10 @@ color: #fff;
 
 .contact
 {
-    background: url(Images/bg3.jpg);
-    background-size: cover;
+    background: url(Images/bg3.png);
+    background-size: 40% 60%;
+    background-repeat: no-repeat;
+    background-position:right ;
 }
 
 .contactForm
